// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph with cycle (force: false) async 1`] = `"Cycle detected in graph"`;

exports[`graph with cycle (force: false) sync 1`] = `"Cycle detected in graph"`;

exports[`struct: order 1`] = `
Array [
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`struct: result 1`] = `
Object {
  "errors": Map {},
  "safe": false,
  "values": Map {
    "a" => "A",
    "b" => "B",
    "c" => "C",
    "d" => "D",
  },
}
`;

exports[`struct: taskFn 1`] = `
Array [
  Array [
    "a",
    Array [
      "a",
    ],
  ],
  Array [
    "b",
    Array [
      "a",
      "b",
    ],
  ],
  Array [
    "c",
    Array [
      "a",
      "b",
      "c",
    ],
  ],
  Array [
    "d",
    Array [
      "a",
      "b",
      "c",
      "d",
    ],
  ],
]
`;

exports[`struct: values 1`] = `
Array [
  Array [
    "a",
    "A",
  ],
  Array [
    "b",
    "B",
  ],
  Array [
    "c",
    "C",
  ],
  Array [
    "d",
    "D",
  ],
]
`;

exports[`task fails on one item async 1`] = `
Array [
  "a:start",
  "c:start",
  "a:error",
  "c:end",
  "d:start",
  "d:end",
]
`;

exports[`task fails on one item async 2`] = `
Object {
  "errors": Map {
    "a" => [Error: oops],
  },
  "safe": true,
  "values": Map {
    "c" => undefined,
    "d" => undefined,
  },
}
`;

exports[`task fails on one item sync 1`] = `
Array [
  "a:start",
  "a:error",
  "c:start",
  "c:end",
  "d:start",
  "d:end",
]
`;

exports[`task fails on one item sync 2`] = `
Object {
  "errors": Map {
    "a" => [Error: oops],
  },
  "safe": true,
  "values": Map {
    "c" => undefined,
    "d" => undefined,
  },
}
`;
